# rs_voxels

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/nvm_app/: Cargo.toml
crates/nvm_app/src/: application.rs  lib.rs  wgpu_state.rs
crates/nvm_v3d/: Cargo.toml
crates/nvm_v3d/examples/: single_chunk.rs
crates/nvm_v3d/src/: lib.rs
crates/nvm_v3d/src/lighting/: mod.rs  storage_chunk.rs  storage_world.rs  update.rs
crates/nvm_v3d/src/meshing/: bit_plane.rs  culled.rs  mod.rs  vertex.rs
crates/nvm_v3d/src/tiles/: identifier.rs  mod.rs
crates/nvm_v3d/src/world/: chunk_storage.rs  pos.rs
game/: Cargo.toml
game/examples/: single_chunk.rs
game/src/: glam_util.rs  lib.rs  main.rs  pipeline_chunk.rs  pipeline_chunk.wgsl  texture_group.rs  vox_util.rs  wgpu_util.rs
game/src/camera/: mod.rs  projection_perspective.rs  transform.rs
game/src/meshing/: culled.rs  mod.rs  vertex.rs
game/src/tiles/: identifier.rs
game/src/world/: chunk_face_vis_provider.rs  chunk_storage.rs  mod.rs  pos.rs
