[workspace]
resolver="2"
members = [
    "game/",
    "crates/nvm_app",
    "crates/nvm_v3d",
]

[workspace.dependencies]
glam       = { version = "0.28.0", features = ["bytemuck"] }
bytemuck   = { version = "1.16.1", features = [ "derive" ] }
wgpu       = "0.20.1"
winit      = "0.30.3"
env_logger = "0.11.3"
pollster   = "0.3.0"
nvm_v3d    = { path = "crates/nvm_v3d" }
nvm_app    = { path = "crates/nvm_app" }

[workspace.lints.clippy]
all                            = { level = "warn", priority = -1 }
pedantic                       = { level = "warn", priority = -1 }
alloc_instead_of_core          = "warn"
as_underscore                  = "warn"
clone_on_ref_ptr               = "warn"
create_dir                     = "warn"
empty_structs_with_brackets    = "warn"
error_impl_error               = "warn"
exit                           = "warn"
filetype_is_file               = "warn"
fn_to_numeric_cast_any         = "warn"
format_push_string             = "warn"
if_then_some_else_none         = "warn"
missing_const_for_fn           = "warn"
mixed_read_write_in_expression = "warn"
panic_in_result_fn             = "warn"
partial_pub_fields             = "warn"
std_instead_of_core            = "warn"
str_to_string                  = "warn"
string_to_string               = "warn"
tests_outside_test_module      = "warn"
undocumented_unsafe_blocks     = "warn"
unnecessary_safety_comment     = "warn"
unnecessary_safety_doc         = "warn"
unseparated_literal_suffix     = "warn"

cast_lossless                  = "allow"
cast_possible_truncation       = "allow"
cast_possible_wrap             = "allow"
cast_precision_loss            = "allow"
cast_sign_loss                 = "allow"
missing_docs_in_private_items  = "allow"
missing_errors_doc             = "allow"
module_name_repetitions        = "allow"
needless_pass_by_value         = "allow"
shadow_unrelated               = "allow"       
missing_panics_doc             = "allow" 
unwrap_in_result               = "allow"
many_single_char_names         = "allow"
match_same_arms                = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
